apps/usenet/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: ghcr.io/linuxserver/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /config/backup
              name: backup
            - mountPath: /data/tvshows
              name: tvshows
            - mountPath: /data/movies
              name: movies
            - mountPath: /data/movies2
              name: movies2
          resources:
            requests:
              memory: 4Gi
            limits:
              memory: 16Gi
          startupProbe:
            httpGet:
              path: /health
              port: 8096
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: backup
          persistentVolumeClaim:
            claimName: jellyfin-backup
        - name: tvshows
          hostPath:
            path: /mnt/tank/media/tv
            type: Directory
        - name: movies
          hostPath:
            path: /mnt/tank/media/movies
            type: Directory
        - name: movies2
          hostPath:
            path: /mnt/tank/media/movies2
            type: Directory
