apps/usenet/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: usenet
spec:
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
